# projeto_crm_python

./: .pdm.toml  app.py  pyproject.toml
config/: database.py  login.py
projeto-crm/: pyvenv.cfg
projeto-crm/Scripts/: activate  activate.bat
routes/: agenda_routes.py  auth_routes.py  calendario_routes.py  empresa_routes.py  login_routes.py
