[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nayara do Carmo Ferreira", email = "nayara.dcf@gmail.com"},
]
dependencies = [
    "flask>=2.2.2",
    "psycopg2-binary>=2.9.3",
    "bcrypt>=4.0.1",
    "flask-login>=0.6.2",
    "flask-cors>=3.0.10",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
